
<resources>
    <string name="app_name">Promedio Académico</string>


    <string name="hint_name_input">Nombre del estudiante</string>
    <string name="hint_note1_input">Nota 1 (15%)</string>
    <string name="hint_note2_input">Nota 2 (15%)</string>
    <string name="hint_note3_input">Nota 3 (20%)</string>
    <string name="hint_note4_input">Nota 4 (25%)</string>
    <string name="hint_note5_input">Nota 5 (25%)</string>


    <string name="label_calculate_button">Calcular</string>


    <string name="result_message">Resultado:</string>
    <string name="error_missing_data">Por favor, completa todos los campos</string>
    <string name="error_invalid_grades">Las notas deben estar entre 0 y 10</string>
    <string name="final_result_message">Estudiante: %1$s\nPromedio: %2$.2f\nEstado: %3$s</string>
</resources>
