<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    android:gravity="center">

    <EditText
        android:id="@+id/studentNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name_input"
        android:inputType="textPersonName"
        android:textSize="@dimen/text_size"
        android:layout_marginBottom="@dimen/button_margin" />

    <EditText
        android:id="@+id/note1Input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_note1_input"
        android:inputType="numberDecimal"
        android:textSize="@dimen/text_size"
        android:layout_marginBottom="@dimen/button_margin" />

    <EditText
        android:id="@+id/note2Input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_note2_input"
        android:inputType="numberDecimal"
        android:textSize="@dimen/text_size"
        android:layout_marginBottom="@dimen/button_margin" />

    <EditText
        android:id="@+id/note3Input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_note3_input"
        android:inputType="numberDecimal"
        android:textSize="@dimen/text_size"
        android:layout_marginBottom="@dimen/button_margin" />

    <EditText
        android:id="@+id/note4Input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_note4_input"
        android:inputType="numberDecimal"
        android:textSize="@dimen/text_size"
        android:layout_marginBottom="@dimen/button_margin" />

    <EditText
        android:id="@+id/note5Input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_note5_input"
        android:inputType="numberDecimal"
        android:textSize="@dimen/text_size"
        android:layout_marginBottom="@dimen/button_margin" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/label_calculate_button" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_message"
        android:textSize="@dimen/text_size"
        android:layout_marginTop="@dimen/button_margin" />
</LinearLayout>
